# tyche-lens

./: .gitignore  .gitmessage  README.md
.github/workflows/: quality.yml
apps/api/: .env.example  README.md  docker-compose.yml  go.mod  go.sum
apps/api/api/: openapi.yaml
apps/api/cmd/tyche-api/: main.go
apps/api/internal/config/: config.go  config_test.go
apps/api/internal/httpapi/: gen.go  generate.go  oapi-codegen.yaml  quotes.go  (+3 more)
apps/api/scripts/: check-generated.go
apps/data-engine/: .env.example  Cargo.toml  README.md
apps/data-engine/src/: app.rs  collect.rs  config.rs  domain.rs  lib.rs  main.rs  market_data.rs  serve.rs  store.rs
apps/data-engine/src/app/: config.rs  http_api.rs
apps/data-engine/src/collect/: fmp.rs
apps/data-engine/src/domain/: dataset.rs  symbol.rs
apps/data-engine/src/market_data/: collector.rs  fmp.rs  quote.rs  store.rs
apps/data-engine/src/serve/: snapshot.rs
apps/data-engine/tests/: read_api.rs
apps/data-engine/tests/fixtures/: dividends.json  income-quarterly.json  profile.json  quote.json
apps/web/: .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  index.html  orval.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.test.ts  vite.config.ts
apps/web/.husky/: pre-commit
apps/web/docs/: ARCHITECTURE.md
apps/web/src/: README.md  main.tsx
docs/: README.md  architecture.md  finance-notes.md  market-data-providers.md
docs/decisions/: 0001-compute-on-request-and-short-cache.md  0002-api-contract-management.md  README.md  _template.md
(+129 files in other folders)
